Try a small font to avoid word wrap in 'the most dangerous night'

--- a/hunt_data/puzzle/the_most_dangerous_night/puzzle.css
+++ b/hunt_data/puzzle/the_most_dangerous_night/puzzle.css
@@ -1,3 +1,9 @@
+#mh-outer {
+  width: 1000px !important;
+}
+td {
+  font-size: 14px;
+}
 td, h1 {
   font-family: 'Alice', serif;
   padding-bottom: 10px;
